// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalDialog matches the last snapshot (useNotificationFormat) 1`] = `
<div
  className="popup"
>
  <div
    className="popup-inner"
    style={
      Object {
        "backgroundImage": "url(/assets/foo.png)",
        "backgroundPosition": "bottom left",
        "backgroundRepeat": "no-repeat",
        "backgroundSize": "180px",
      }
    }
  >
    <span
      className="close-btn"
      onClick={[Function]}
    >
      <Icon
        className="icon"
        name="Ex"
      />
    </span>
    <div
      className="title-block"
    >
      <Icon
        className="notification-icon"
        green={true}
        name="Star"
      />
      <h1
        className="notification-title"
      >
        Wombats
      </h1>
    </div>
    <div
      className="content"
    >
      <div>
        Yep, they're awesome alright.
      </div>
    </div>
    <div
      className="controls"
    >
      <Button
        className="cancel-btn"
        color="green-white-green-border"
        onClick={[Function]}
      >
        Cancel
      </Button>
      <Button
        className="submit-btn"
        disabled={false}
        onClick={[Function]}
      >
        Square Poop
      </Button>
    </div>
  </div>
</div>
`;

exports[`ModalDialog matches the last snapshot 1`] = `
<div
  className="popup"
>
  <div
    className="popup-inner"
    style={Object {}}
  >
    <span
      className="close-btn"
      onClick={[Function]}
    >
      <Icon
        className="icon"
        name="Ex"
      />
    </span>
    <div
      className="title-block"
    >
      <h1
        className=""
      >
        Wombats
      </h1>
    </div>
    <div
      className="content"
    >
      <div>
        Describe how awesome wombats are:
      </div>
      <input
        autofocus={true}
      />
    </div>
    <div
      className="controls"
    >
      <Button
        className="cancel-btn"
        color="green-white-green-border"
        onClick={[Function]}
      >
        Cancel
      </Button>
      <Button
        className="submit-btn"
        disabled={false}
        onClick={[Function]}
      >
        Square Poop
      </Button>
    </div>
  </div>
</div>
`;
